--- a/style.css
+++ b/style.css
@@ -185,6 +185,84 @@ body{
     gap: 8px;
     width: 110px;
 }
+.rooms{
+    background-color: black; /* Base color for the section */
+    background-image: 
+        url(pics/noise.svg); /* Your SVG noise texture */
+    background-size: cover; /* Adjust as needed */
+    background-blend-mode:luminosity; /* Blend the SVG with the color */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-top: 55px;
+    padding-bottom: 45px;
+    border-bottom:0.5px solid #d3d3d38f ; 
+}
+.rooms-title{
+    width: 735px;
+    display: flex;
+    justify-content: flex-start;
+    margin-left: auto;
+    margin-right: auto;
+}
+.rooms-title h3{
+    color: var(--primary-color);
+    margin-left: 17px;
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+.kitchens{
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 35px;
+
+}
+.room-kitchen{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+
+.room-kitchen span{
+    color: var(--span-color);
+    font-size: 1.09rem;
+    margin-bottom: 14px;
+}
+.room-kitchen p{
+    color: var(--secondary-color);
+    font-size: 1rem;
+}
+
+.kitchens2{
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 95px;
+}
+.room-kitchen2{
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+.room-kitchen2 span{
+    color: var(--span-color);
+    font-size: 1.09rem;
+    margin-bottom: 14px;
+}
+.room-kitchen2 p{
+    color: var(--secondary-color);
+    font-size: 1rem;
+}
+
 
 
 @media (max-width: 430px) {
@@ -286,6 +364,64 @@ body{
         font-size: 0.85rem;
         margin-top: 18px;
     }
+
+    .rooms-title{
+        width: 95%;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        justify-content: flex-start;
+    }
+    .rooms-title h3{
+        color: var(--primary-color);
+        margin-left: 0px;
+        font-size: 1.15rem;
+    }
+    .kitchens{
+        width: 95%;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 35px;
+        gap: 10px;
+    
+    }
+
+    .room-kitchen span{
+        color: var(--span-color);
+        font-size: 0.9rem;
+        margin-bottom: 14px;
+    }
+    .room-kitchen p{
+        color: var(--secondary-color);
+        font-size: 0.8rem;
+    }
+
+    .kitchens2{
+        width: 95%;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 65px;
+        gap: 23px;
+    
+    }
+
+    .room-kitchen2 span{
+        color: var(--span-color);
+        font-size: 0.9rem;
+        margin-bottom: 14px;
+    }
+    .room-kitchen2 p{
+        color: var(--secondary-color);
+        font-size: 0.8rem;
+    }
+    
+   
        
     
     
