--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ body{
     justify-content: center;
     flex-direction: column;
     padding-top: 55px;
-    padding-bottom: 45px;
+    padding-bottom: 65px;
     border-bottom:0.5px solid #d3d3d38f ; 
 }
 .rooms-title{
@@ -262,6 +262,85 @@ body{
     color: var(--secondary-color);
     font-size: 1rem;
 }
+.locations{
+    background-color: black; /* Base color for the section */
+    background-image: 
+        url(pics/noise.svg); /* Your SVG noise texture */
+    background-size: cover; /* Adjust as needed */
+    background-blend-mode:luminosity; /* Blend the SVG with the color */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 37px;
+    padding-bottom: 37px;
+    border-bottom:0.5px solid #d3d3d38f ; 
+}
+.locations a{
+    color: var(--secondary-color);
+    font-size: 0.9rem;
+}
+
+.slider-section{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: black; /* Base color for the section */
+    background-image: 
+        url(pics/noise.svg); /* Your SVG noise texture */
+    background-size: cover; /* Adjust as needed */
+    background-blend-mode:luminosity;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-bottom:0.5px solid #d3d3d38f ; 
+}
+
+.slider{
+    position: relative;
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+}
+.sliderimg{
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: none;
+    border-radius: 1rem;
+}
+img.displaySlide{
+    display: block;
+    animation-name: fade;
+    animation-duration: .5s;
+}
+.prev,.next{
+    opacity: 0.9;
+    height: 70px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    z-index: 2;
+    transition: filter 0.2s ease; 
+
+}
+.prev:active, .next:active {
+    filter: brightness(1.3) drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.6)); /* Brighten and add a slight glow */
+}
+.prev {
+    left:0; /* Move it outside of the slider */
+}
+
+.next {
+    right:0; /* Move it outside of the slider */
+}
+
+@keyframes fade{
+    from{opacity: .5;}
+    to{opacity: 1;}
+}
+
 
 
 
@@ -277,7 +356,7 @@ body{
         width: 100%;
         background-color: rgba(0, 0, 0, 0.733); /* Background color for the sidebar */
         position: fixed; 
-        z-index: 1;
+        z-index: 4;
         transition: transform 0.3s ease, display 0s 0.3s; 
         transform: translateX(-100%);
     }
@@ -419,6 +498,12 @@ body{
     .room-kitchen2 p{
         color: var(--secondary-color);
         font-size: 0.8rem;
+    }
+    .prev,.next{
+        height: 40px;
+    }
+    .slider{
+        width: 90%;
     }
     
    
